--- a/tex/500L.tex
+++ b/tex/500L.tex
@@ -260,12 +260,50 @@
 \mainmatter
 
 
+\include{image-filters}
+
+\include{dagoba}
+
+\include{ocr}
+
+\include{contingent}
+
+\include{same-origin-policy}
+
 \include{blockcode}
 
+\include{interpreter}
 
-\bibliographystyle{alpha}
+\include{web-server}
 
-\bibliography{500L}
+\include{static-analysis}
+
+\include{functionalDB}
+
+\include{flow-shop}
+
+\include{template-engine}
+
+\include{pedometer}
+
+\include{sampler}
+
+\include{spreadsheet}
+
+\include{cluster}
+
+\include{data-store}
+
+\include{objmodel}
+
+\include{ci}
+
+\include{crawler}
+
+\include{modeller}
+
+\include{event-web-framework}
+
 
 \makeatletter
 \@openrightfalse
